# zitapp

./: .clang-format  CMakeLists.txt  CMakePresets.json  LICENSE  RCa35852  README.md  app.py  render.yaml  vcpkg.json  zitapp.rc
.github/workflows/: build_window.yml  cmake-single-platform.yml
capnhat/: CMakeLists.txt  capnhat.cpp  capnhat.h  cn_main.cpp  get.cpp  get.h  giainen.cpp  giainen.h
csdl/: csdl.cpp  csdl.h  csdl_thongbao.cpp  csdl_thongbao.h  dv_csdl.cpp
giaodien/: giaodien.cpp  giaodien.h  hieuung.cpp  hieuung.h  logic_giaodien.cpp  logic_giaodien.h
include/: log_nhalam.h  preboost_winsock.hpp  resource.h
src/: app.cpp  app.h  cauhinh.ini  chay_luongphu.cpp  chay_luongphu.h  chucnang_cotloi.cpp  chucnang_cotloi.h  csdl.cpp  csdl.h  csdl_thongbao.h  dv_csdl.cpp  dv_csdl.h  giaodien.cpp  giaodien.h  imgui.ini  imgui_setup.cpp  imgui_setup.h  log_nhalam.cpp  logic_giaodien.cpp  logic_giaodien.h  net.cpp  net.h  opengl3_setup.cpp  opengl3_setup.h  sql.sha  thread_pool.cpp  thread_pool.h  zitapp_main.cpp
tainguyen/: sql.db
tienich/: kiemtra_ketnoi_mang.cpp  kiemtra_ketnoi_mang.h  log_nhalam.cpp  net.cpp  net.h  trangthai_phanmem.cpp  trangthai_phanmem.h
